Add Apache License header to multiple files